--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -32,6 +32,7 @@
 
     <style name="Theme.TailorMade.Button.Outlined.Rounded" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="shapeAppearanceOverlay">@style/Theme.TailorMade.CornerRounded.All</item>
+        <item name="backgroundTint">?colorSurface</item>
     </style>
 
     <style name="Theme.TailorMade.Button.Outlined.Rounded.Red" parent="Theme.TailorMade.Button.Outlined.Rounded">
@@ -261,6 +262,34 @@
 
     <style name="TextAppearance.TailorMade.Overline.Primary" parent="TextAppearance.TailorMade.Overline">
         <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.Primary" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">?colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.PrimaryDark" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.BlackHigh" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.BlackMedium" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.BlackMedium2" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">@color/color_black_54</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.BlackLow" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Caption.BlackLight" parent="TextAppearance.TailorMade.Caption">
+        <item name="android:textColor">@color/color_black_20</item>
     </style>
 
     <style name="TextAppearance.TailorMade.Overline.PrimaryDark" parent="TextAppearance.TailorMade.Overline">
