--- a/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
@@ -57,12 +57,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_16"
         android:src="@drawable/ic_company"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/text_view_about_occupation_value"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_about_address_value"
         app:tint="?colorPrimary"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/text_view_about_occupation_value"
@@ -72,9 +74,11 @@
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_4"
         android:text="@string/about_occupation_value"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_about_occupation"
-        app:layout_constraintTop_toTopOf="@id/image_view_about_occupation" />
+        app:layout_constraintTop_toTopOf="@id/image_view_about_occupation"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/image_view_about_school"
@@ -82,12 +86,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_16"
         android:src="@drawable/ic_school"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/text_view_about_school_value"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_about_occupation_value"
         app:tint="?colorPrimary"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/text_view_about_school_value"
@@ -97,8 +103,10 @@
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_4"
         android:text="@string/about_school_value"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_view_about_school"
-        app:layout_constraintTop_toTopOf="@id/image_view_about_school" />
+        app:layout_constraintTop_toTopOf="@id/image_view_about_school"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
