SETUP-PROFILE-MAIN-PAGE: Convert to viewbinding
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/src/main/res/layout/activity_sign_in.xml
+++ b/features/tailormade_auth/src/main/res/layout/activity_sign_in.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".feature.signIn.view.SignInActivity">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/top_appbar_layout_sign_in"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/top_toolbar_sign_in"
+            style="@style/Theme.TailorMade.Toolbar.Back"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_auth_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".feature.signIn.view.SignInActivity">
+        android:layout_margin="@dimen/dp_16"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_auth_graph" />
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/top_appbar_layout_sign_in"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/top_toolbar_sign_in"
-                style="@style/Theme.TailorMade.Toolbar.Back"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_host_auth_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/dp_16"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_auth_graph" />
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
