--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
@@ -33,27 +33,25 @@
 
         <TextView
             android:id="@+id/text_view_design_name"
-            style="?attr/textAppearanceSubtitle1"
+            style="@style/TextAppearance.TailorMade.Subtitle1.BlackHigh"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_8"
-            android:text="@string/design_name_label"
-            android:textColor="@color/color_black_87"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_rounded_separator" />
+            app:layout_constraintTop_toBottomOf="@id/view_rounded_separator"
+            tools:text="@string/design_name_label" />
 
         <TextView
             android:id="@+id/text_view_design_price"
-            style="?attr/textAppearanceBody2"
+            style="@style/TextAppearance.TailorMade.Body2.Primary"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_8"
             android:layout_marginTop="@dimen/dp_4"
             android:layout_marginBottom="@dimen/dp_12"
-            android:text="@string/design_price_label"
-            android:textColor="?attr/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_design_name" />
+            app:layout_constraintTop_toBottomOf="@id/text_view_design_name"
+            tools:text="@string/design_price_label" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
