--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_order.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_order.xml
@@ -7,11 +7,10 @@
     android:layout_margin="@dimen/dp_16"
     android:elevation="@dimen/dp_4">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/dp_12"
-        android:orientation="horizontal">
+        android:layout_margin="@dimen/dp_12">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image_view_order"
@@ -22,131 +21,121 @@
             app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp"
             tools:ignore="ContentDescription" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/text_view_order_title"
+            style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
+            android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_12">
+            android:layout_marginStart="@dimen/dp_12"
+            app:layout_constraintStart_toEndOf="@id/image_view_order"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/order_title_label" />
 
-            <TextView
-                android:id="@+id/text_view_order_title"
-                style="?attr/textAppearanceBody1"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:text="@string/order_title_label"
-                android:textColor="@color/color_black_87"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/text_view_order_color_label"
+            style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="@string/order_color_label"
+            app:layout_constraintStart_toEndOf="@id/image_view_order"
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
 
-            <TextView
-                android:id="@+id/text_view_order_color_label"
-                style="?attr/textAppearanceCaption"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_color_label"
-                android:textColor="@color/color_black_60"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+        <TextView
+            android:id="@+id/text_view_order_color"
+            style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_order_color_label"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_color_label"
+            app:layout_constraintTop_toTopOf="@id/text_view_order_color_label"
+            tools:text="@string/order_color_value_label" />
 
-            <TextView
-                android:id="@+id/text_view_order_color"
-                style="?attr/textAppearanceCaption"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_4"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_color_value_label"
-                android:textColor="@color/color_black_87"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_color_label"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+        <TextView
+            android:id="@+id/text_view_order_size_label"
+            style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="@string/order_size_label"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_color"
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
 
-            <TextView
-                android:id="@+id/text_view_order_size_label"
-                style="?attr/textAppearanceCaption"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_size_label"
-                android:textColor="@color/color_black_60"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_color"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+        <TextView
+            android:id="@+id/text_view_order_size"
+            style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_order_size_label"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_size_label"
+            app:layout_constraintTop_toTopOf="@id/text_view_order_size_label"
+            tools:text="@string/order_size_value_label" />
 
-            <TextView
-                android:id="@+id/text_view_order_size"
-                style="?attr/textAppearanceCaption"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_4"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_size_value_label"
-                android:textColor="@color/color_black_87"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_size_label"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_title" />
+        <TextView
+            android:id="@+id/text_view_order_price"
+            style="@style/TextAppearance.TailorMade.Body2.Primary"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_8"
+            app:layout_constraintStart_toEndOf="@id/image_view_order"
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label"
+            tools:text="@string/order_price_label" />
 
-            <TextView
-                android:id="@+id/text_view_order_price"
-                style="?attr/textAppearanceBody2"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_price_label"
-                android:textColor="?attr/colorPrimary"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+        <TextView
+            android:id="@+id/text_view_order_price_discount"
+            style="@style/TextAppearance.TailorMade.Body2.Primary.Bold"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            android:text="@string/order_price_discount_label"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_price"
+            app:layout_constraintTop_toTopOf="@id/text_view_order_price"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"/>
 
-            <TextView
-                android:id="@+id/text_view_order_price_discount"
-                style="?attr/textAppearanceBody2"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_4"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_price_discount_label"
-                android:textColor="?attr/colorPrimary"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_price"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+        <TextView
+            android:id="@+id/text_view_order_discount"
+            style="@style/TextAppearance.TailorMade.Body2.BlackMedium2"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_price_discount"
+            app:layout_constraintTop_toTopOf="@id/text_view_order_price"
+            tools:text="@string/order_discount_label" />
 
-            <TextView
-                android:id="@+id/text_view_order_discount"
-                style="?attr/textAppearanceBody2"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_4"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/order_discount_label"
-                android:textColor="@color/color_black_54"
-                app:layout_constraintStart_toEndOf="@id/text_view_order_price_discount"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_color_label" />
+        <com.future.tailormade_dls.widget.SpinNumberButton
+            android:id="@+id/spin_button_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_12"
+            app:layout_constraintStart_toEndOf="@id/image_view_order"
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_price" />
 
-            <com.future.tailormade_dls.widget.SpinNumberButton
-                android:id="@+id/spin_button_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_12"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_price" />
+        <ImageButton
+            android:id="@+id/button_delete_order"
+            style="@style/Theme.TailorMade.CornerRounded.All"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintBottom_toBottomOf="@id/spin_button_number"
+            app:layout_constraintStart_toEndOf="@id/spin_button_number"
+            app:layout_constraintTop_toTopOf="@id/spin_button_number"
+            tools:ignore="ContentDescription" />
 
-            <ImageButton
-                android:id="@+id/button_delete_order"
-                style="@style/Theme.TailorMade.CornerRounded.All"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="@dimen/dp_40"
-                android:layout_marginTop="@dimen/dp_12"
-                android:src="@drawable/ic_delete"
-                app:layout_constraintStart_toEndOf="@id/spin_button_number"
-                app:layout_constraintTop_toBottomOf="@id/text_view_order_price"
-                tools:ignore="ContentDescription" />
-
-            <Button
-                android:id="@+id/button_checkout_order"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_12"
-                android:text="@string/checkout_order_label"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_delete_order" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+        <Button
+            android:id="@+id/button_checkout_order"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:layout_marginTop="@dimen/dp_12"
+            android:text="@string/checkout_order_label"
+            app:layout_constraintStart_toEndOf="@id/image_view_order"
+            app:layout_constraintTop_toBottomOf="@id/button_delete_order" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
