--- a/libraries/tailormade_dls/src/main/res/layout/layout_order_total.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_order_total.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_order_total"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,53 +10,47 @@
 
     <TextView
         android:id="@+id/text_view_order_quantity_label"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
         android:layout_row="0"
         android:layout_column="0"
-        android:text="@string/order_quantity_label"
-        android:textColor="@color/color_black_60" />
+        android:text="@string/order_quantity_label" />
 
     <TextView
         android:id="@+id/text_view_order_quantity"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
         android:layout_row="0"
         android:layout_column="1"
         android:layout_gravity="end"
-        android:text="@string/order_quantity_value_label"
-        android:textColor="@color/color_black_87" />
+        tools:text="@string/order_quantity_value_label" />
 
     <TextView
         android:id="@+id/text_view_order_total_discount_label"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
         android:layout_row="1"
         android:layout_column="0"
-        android:text="@string/order_total_discount_label"
-        android:textColor="@color/color_black_60" />
+        android:text="@string/order_total_discount_label" />
 
     <TextView
         android:id="@+id/text_view_order_total_discount"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
         android:layout_row="1"
         android:layout_column="1"
         android:layout_gravity="end"
-        android:text="@string/order_total_discount_value_label"
-        android:textColor="@color/color_black_87" />
+        tools:text="@string/order_total_discount_value_label" />
 
     <TextView
         android:id="@+id/text_view_order_total_price_label"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
         android:layout_row="2"
         android:layout_column="0"
-        android:text="@string/order_total_price_label"
-        android:textColor="@color/color_black_60" />
+        android:text="@string/order_total_price_label" />
 
     <TextView
         android:id="@+id/text_view_order_total_price"
-        style="?attr/textAppearanceCaption"
+        style="@style/TextAppearance.TailorMade.Caption.Primary"
         android:layout_row="2"
         android:layout_column="1"
         android:layout_gravity="end"
-        android:text="@string/order_total_price_value_label"
-        android:textColor="?attr/colorPrimary" />
+        tools:text="@string/order_total_price_value_label" />
 
 </GridLayout>
