--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.MainActivity">
+        tools:context=".feature.main.view.MainActivity">
 
         <!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
         <!--            android:id="@+id/bottom_nav_main"-->
