DASHBOARD: Add response and fix adapter
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/layout_dashboard_tailor.xml
+++ b/app/src/main/res/layout/layout_dashboard_tailor.xml
@@ -35,5 +35,10 @@
             android:visibility="gone"
             tools:visibility="visible" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_preview_designs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_12" />
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
