--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
@@ -27,9 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_8"
             android:background="?attr/colorSurface"
+            app:layout_constraintBottom_toBottomOf="@id/image_view_design"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_view_design" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_view_design_name"
