--- a/libraries/tailormade_dls/src/main/res/values-night/themes.xml
+++ b/libraries/tailormade_dls/src/main/res/values-night/themes.xml
@@ -10,12 +10,16 @@
 
         <item name="android:colorBackground">@color/color_black</item>
         <item name="colorSurface">@color/color_black</item>
+        <item name="colorSurface2">@color/color_black</item>
         <item name="colorError">@color/color_red_400</item>
 
         <item name="colorOnPrimary">@color/color_white</item>
         <item name="colorOnBackground">@color/color_white</item>
         <item name="colorOnSurface">@color/color_white</item>
         <item name="colorOnError">@color/color_white</item>
+        <item name="badgeTextColor">@color/color_black_87</item>
+
+        <item name="cardBackgroundColor">@color/color_black_93</item>
 
         <!-- Type styles -->
         <item name="textAppearanceHeadline1">
@@ -65,9 +69,7 @@
         <item name="materialButtonOutlinedStyle">
             @style/Theme.TailorMade.Button.Outlined.Rounded
         </item>
-        <item name="materialCardViewStyle">
-            @style/Widget.MaterialComponents.CardView
-        </item>
+        <item name="materialCardViewStyle">@style/Theme.TailorMade.Card</item>
         <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout</item>
         <item name="badgeStyle">@style/Widget.MaterialComponents.Badge</item>
         <item name="floatingActionButtonStyle">
