--- a/libraries/tailormade_dls/src/main/res/values/colors.xml
+++ b/libraries/tailormade_dls/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
     <color name="color_green_900">#007c00</color>
 
     <color name="color_black">#121212</color>
+    <color name="color_black_93">#ED000000</color>
     <color name="color_black_87">#DE000000</color>
     <color name="color_black_60">#99000000</color>
     <color name="color_black_54">#8A000000</color>
