--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -32,6 +32,7 @@
     <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_28">28dp</dimen>
+    <dimen name="dp_26">26dp</dimen>
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_20">20dp</dimen>
