--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -8,7 +8,9 @@
     android:orientation="vertical"
     tools:context=".feature.view.DesignDetailFragment">
 
-    <include layout="@layout/layout_design_detail_general_info" />
+    <include
+        android:id="@+id/layout_design_detail_general_info"
+        layout="@layout/layout_design_detail_general_info" />
 
     <TextView
         android:id="@+id/text_view_size_info_label"
@@ -48,6 +50,12 @@
         android:layout_height="@dimen/dp_1"
         android:background="?attr/colorSurface2"
         android:paddingHorizontal="@dimen/dp_16" />
+
+    <include
+        android:id="@+id/layout_size_information_detail"
+        layout="@layout/layout_size_information_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/text_view_available_color_label"
