SETUP-DESIGN-DETAIL-LAYOUT: Fix styling and add option menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
@@ -16,7 +16,8 @@
             android:id="@+id/top_toolbar_design_detail"
             style="@style/Theme.TailorMade.Toolbar.Back"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/menu_item_design_detail" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
