SETUP-DESIGN-DETAIL-LAYOUT: Added bottom navigation menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -148,5 +148,6 @@
         android:layout_margin="@dimen/dp_16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/menu_bottom_nav_design_detail" />
 </androidx.constraintlayout.widget.ConstraintLayout>
