SETUP-DESIGN-DETAIL-LAYOUT: Added bottom navigation menu and fix layout
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
@@ -40,11 +40,9 @@
             android:layout_gravity="bottom|end"
             android:layout_marginTop="@dimen/dp_16"
             android:layout_marginEnd="@dimen/dp_16"
-            android:visibility="gone"
             app:maxImageSize="@dimen/dp_40"
             app:srcCompat="@drawable/ic_swap_face"
-            tools:ignore="ContentDescription"
-            tools:visibility="visible" />
+            tools:ignore="ContentDescription" />
     </FrameLayout>
 
     <TextView
