DESIGN-DETAIL-FRAGMENT-AND-VIEW-MODEL: Provide UI function to set data
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -121,6 +121,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/cardBackgroundColor"
+        android:ellipsize="end"
+        android:maxLines="3"
         android:paddingHorizontal="@dimen/dp_16"
         android:paddingVertical="@dimen/dp_12"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +136,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/cardBackgroundColor"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingHorizontal="@dimen/dp_16"
         android:paddingBottom="@dimen/dp_16"
         android:text="@string/read_more_label"
