--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
@@ -100,6 +100,8 @@
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_4"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="@id/text_view_design_detail_designed_by_label"
         app:layout_constraintStart_toEndOf="@id/text_view_design_detail_designed_by_label"
         app:layout_constraintTop_toTopOf="@id/text_view_design_detail_designed_by_label"
