--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="dp_12">12dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_3">3dp</dimen>
     <dimen name="dp_2">2dp</dimen>
