SETUP-SORT-AND-FILTER: Fix comments
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_search/src/main/res/layout/activity_search.xml
+++ b/features/tailormade_search/src/main/res/layout/activity_search.xml
@@ -32,10 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_search"
-        app:tabMode="fixed">
+        app:tabMode="fixed"
+        tools:visibility="visible">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_item_design"
@@ -59,10 +60,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout_search">
+        app:layout_constraintTop_toBottomOf="@id/tab_layout_search"
+        tools:visibility="visible">
 
     </androidx.viewpager2.widget.ViewPager2>
 
+    <!-- TODO: Add nav container graph -->
 <!--    <androidx.fragment.app.FragmentContainerView-->
 <!--        android:id="@+id/nav_host_fragment"-->
 <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
