SETUP-CHAT-ROOM: Fix comments
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/src/main/res/layout/layout_input_text_chat_room.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_input_text_chat_room.xml
@@ -6,21 +6,21 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Theme.TailorMade.TextInputLayout.OutlinedBox"
         android:id="@+id/text_input_message_chat_room"
+        style="@style/Theme.TailorMade.TextInputLayout.OutlinedBox"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/dp_8"
-        android:layout_width="@dimen/dp_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_send_message"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:hint="@string/chat_input_message_label"
             android:id="@+id/edit_text_message_chat_room"
-            android:inputType="textMultiLine"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/chat_input_message_label"
+            android:inputType="textMultiLine"
             android:paddingHorizontal="@dimen/dp_8" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -28,10 +28,10 @@
     <ImageButton
         android:background="@drawable/drawable_primary_rounded"
         android:id="@+id/button_send_message"
-        android:layout_height="@dimen/dp_53"
-        android:layout_width="@dimen/dp_53"
+        android:layout_height="@dimen/dp_52"
+        android:layout_width="@dimen/dp_52"
         android:src="@drawable/ic_send"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/text_input_message_chat_room"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="ContentDescription" />
 
