--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -24,42 +24,14 @@
             tools:visibility="visible" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <ImageView
-        android:id="@+id/image_view_dashboard_state"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/layout_dashboard_state"
+        layout="@layout/layout_dashboard_state"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/drawable_dashboard_state"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_dashboard_title_state"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/text_view_dashboard_title_state"
-        style="@style/TextAppearance.TailorMade.Headline2"
-        android:layout_width="@dimen/dp_0"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_16"
-        android:text="@string/dashboard_title_state"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_dashboard_description_state"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_view_dashboard_state" />
-
-    <TextView
-        android:id="@+id/text_view_dashboard_description_state"
-        style="@style/TextAppearance.TailorMade.Body1.BlackMedium"
-        android:layout_width="@dimen/dp_0"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:text="@string/dashboard_description_state"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_dashboard_title_state" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
