--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -17,41 +17,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/image_view_cart_state"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/layout_cart_empty_state"
+        layout="@layout/layout_cart_empty_state"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/illustration_empy_cart"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_cart_title_state"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/text_view_cart_title_state"
-        style="@style/TextAppearance.TailorMade.Headline2"
-        android:layout_width="@dimen/dp_0"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_16"
-        android:text="@string/cart_title_state"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_cart_description_state"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_view_cart_state" />
-
-    <TextView
-        android:id="@+id/text_view_cart_description_state"
-        style="@style/TextAppearance.TailorMade.Body1.BlackMedium"
-        android:layout_width="@dimen/dp_0"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:text="@string/cart_description_state"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_cart_title_state" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
