PROFILE_DESIGN_LIST: Revise and add mapper to ProfileViewModel
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
@@ -21,6 +21,8 @@
         style="@style/TextAppearance.TailorMade.Overline.BlackHigh"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@string/edit_label"
         app:layout_constraintBottom_toBottomOf="@id/text_view_about_title"
         app:layout_constraintEnd_toEndOf="parent"
